[gd_scene load_steps=5 format=3 uid="uid://d2i6k8nsp0ms0"]

[ext_resource type="Script" uid="uid://d1gvocg7numtb" path="res://scenes/ui/inventory/inventory.gd" id="1_msrby"]
[ext_resource type="Texture2D" uid="uid://dujoyv2fb471r" path="res://assets/ui/button_mockup.png" id="2_lobmi"]
[ext_resource type="Texture2D" uid="uid://k4g86uqyycw0" path="res://classes/deprecated/items/ball/ball2.png" id="3_el5y6"]
[ext_resource type="FontFile" uid="uid://dnq6mej4gi63b" path="res://assets/m3x6.ttf" id="4_lobmi"]

[node name="Inventory" type="CanvasLayer" node_paths=PackedStringArray("money_label")]
layer = 2
script = ExtResource("1_msrby")
money_label = NodePath("Money/Label")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -11.0
offset_right = 654.0
offset_bottom = 371.0

[node name="Slot0" type="Node2D" parent="."]
position = Vector2(320, 30)

[node name="Background" type="NinePatchRect" parent="Slot0"]
offset_left = -160.0
offset_top = -28.999998
offset_right = 160.0
offset_bottom = 31.000002
scale = Vector2(1, 0.98)
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Icon" type="TextureRect" parent="Slot0/Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("3_el5y6")

[node name="NameLabel" type="Label" parent="Slot0/Background"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"

[node name="QuantityLabel" type="Label" parent="Slot0/Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"

[node name="DescriptionLabel" type="Label" parent="Slot0/Background"]
layout_mode = 0
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3

[node name="Slot1" type="Node2D" parent="."]
position = Vector2(320, 90)

[node name="Background" type="NinePatchRect" parent="Slot1"]
offset_left = -160.0
offset_top = -28.999998
offset_right = 160.0
offset_bottom = 31.000002
scale = Vector2(1, 0.98)
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Icon" type="TextureRect" parent="Slot1/Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("3_el5y6")

[node name="NameLabel" type="Label" parent="Slot1/Background"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"

[node name="QuantityLabel" type="Label" parent="Slot1/Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"

[node name="DescriptionLabel" type="Label" parent="Slot1/Background"]
layout_mode = 0
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3

[node name="Slot2" type="Node2D" parent="."]
position = Vector2(320, 150)

[node name="Background" type="NinePatchRect" parent="Slot2"]
offset_left = -160.0
offset_top = -28.999998
offset_right = 160.0
offset_bottom = 31.000002
scale = Vector2(1, 0.98)
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Icon" type="TextureRect" parent="Slot2/Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("3_el5y6")

[node name="NameLabel" type="Label" parent="Slot2/Background"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"

[node name="QuantityLabel" type="Label" parent="Slot2/Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"

[node name="DescriptionLabel" type="Label" parent="Slot2/Background"]
layout_mode = 0
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3

[node name="Slot3" type="Node2D" parent="."]
position = Vector2(320, 210)

[node name="Background" type="NinePatchRect" parent="Slot3"]
offset_left = -160.0
offset_top = -28.999998
offset_right = 160.0
offset_bottom = 31.000002
scale = Vector2(1, 0.98)
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Icon" type="TextureRect" parent="Slot3/Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("3_el5y6")

[node name="NameLabel" type="Label" parent="Slot3/Background"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"

[node name="QuantityLabel" type="Label" parent="Slot3/Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"

[node name="DescriptionLabel" type="Label" parent="Slot3/Background"]
layout_mode = 0
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3

[node name="Slot4" type="Node2D" parent="."]
position = Vector2(320, 270)

[node name="Background" type="NinePatchRect" parent="Slot4"]
offset_left = -160.0
offset_top = -28.999998
offset_right = 160.0
offset_bottom = 31.000002
scale = Vector2(1, 0.98)
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Icon" type="TextureRect" parent="Slot4/Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("3_el5y6")

[node name="NameLabel" type="Label" parent="Slot4/Background"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"

[node name="QuantityLabel" type="Label" parent="Slot4/Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"

[node name="DescriptionLabel" type="Label" parent="Slot4/Background"]
layout_mode = 0
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3

[node name="Slot5" type="Node2D" parent="."]
position = Vector2(320, 330)

[node name="Background" type="NinePatchRect" parent="Slot5"]
offset_left = -160.0
offset_top = -28.999998
offset_right = 160.0
offset_bottom = 31.000002
scale = Vector2(1, 0.98)
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Icon" type="TextureRect" parent="Slot5/Background"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -19.795921
offset_right = 46.0
offset_bottom = 20.204079
grow_vertical = 2
texture = ExtResource("3_el5y6")

[node name="NameLabel" type="Label" parent="Slot5/Background"]
layout_mode = 0
offset_left = 43.0
offset_top = 4.0816307
offset_right = 125.0
offset_bottom = 30.08163
text = "Item Name"

[node name="QuantityLabel" type="Label" parent="Slot5/Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 26.530611
offset_right = 84.0
offset_bottom = 52.53061
text = "x ##"

[node name="DescriptionLabel" type="Label" parent="Slot5/Background"]
layout_mode = 0
offset_left = 141.0
offset_top = 3.061224
offset_right = 314.0
offset_bottom = 58.061226
text = "Brief Item Description
cannot be longer than"
autowrap_mode = 3

[node name="Money" type="NinePatchRect" parent="."]
offset_left = 512.0
offset_top = 4.0
offset_right = 618.0
offset_bottom = 48.0
texture = ExtResource("2_lobmi")
region_rect = Rect2(0, 0, 160, 60)
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="Money"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.5
offset_top = -22.0
offset_right = 49.5
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_lobmi")
theme_override_font_sizes/font_size = 48
text = "$ 999999"
vertical_alignment = 1
